--- a/player-service/src/main/resources/application.properties
+++ b/player-service/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.application.name=player-service
 server.port=8082
 server.ssl.enabled=false
 # MongoDB configuration
-spring.data.mongodb.uri=mongodb+srv://mohanprince422:Mohan%40422@vevacloudtechnology.poxc4uj.mongodb.net/Cricket-Fantasy-App?retryWrites=true&w=majority
+spring.data.mongodb.uri=#
 spring.data.mongodb.auto-creation=true
